<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor">

        <TextView
            android:id="@+id/ques1_text_view"
            style="@style/Faq"
            android:text="@string/ques_1" />

        <TextView
            android:id="@+id/ques2_text_view"
            style="@style/Faq"
            android:layout_below="@id/ques1_text_view"
            android:text="@string/ques_2" />

        <TextView
            android:id="@+id/ques3_text_view"
            style="@style/Faq"
            android:layout_below="@id/ques2_text_view"
            android:text="@string/ques_3" />

        <TextView
            android:id="@+id/ques4_text_view"
            style="@style/Faq"
            android:layout_below="@id/ques3_text_view"
            android:text="@string/ques_4" />

    </RelativeLayout>
</ScrollView>